# MQTT_Protocol

./: .gitignore  CMakeLists.txt  README.md  cmd.txt  emsambler.cpp  main  main.cpp
mqtt_mosq/src/publisher/: CMakeLists.txt
mqtt_mosq/src/subscriber/: main.cpp  mqtt_sub.cpp  mqtt_sub.h
mqtt_paho/: CMakeLists._txt  CMakeLists.txt
mqtt_paho/cmake/: BuildCommon.cmake  ConfigPackage.cmake  CoverageGcovr.cmake  CoverageLcov.cmake  Eclipse.cmake  Jenkinsfile  ProjectCommon.cmake  Testing.cmake  doxyfile.in
mqtt_paho/lib/googletest/: CMakeLists.txt
mqtt_paho/lib/googletest/googlemock/: CMakeLists.txt
mqtt_paho/lib/googletest/googletest/: CMakeLists.txt
mqtt_paho/lib/lib-common/: CMakeLists.txt
mqtt_paho/lib/lib-common/mocks/: CMakeLists.txt
mqtt_paho/lib/lib-common/mocks/include/mocks/: MockBackendClient.h  MockITransportClient.h
mqtt_paho/lib/lib-common/mqtt_util/: CMakeLists.txt
mqtt_paho/lib/lib-common/mqtt_util/include/mqtt_util/: BackendProxy.h  Client.h  EcuVar.h  UdsInterface.h
mqtt_paho/lib/lib-common/mqtt_util/src/: BackendProxy.cpp  Client.cpp  EcuVar.cpp  UdsInterface.cpp
mqtt_paho/lib/lib-common/test_util/: CMakeLists.txt
mqtt_paho/lib/lib-common/test_util/include/test_util/: AlmostEqual.h  GenerateError.h  InitLogging.h  InotifyWrapper.h  MessageHelpers.h  MockHelpers.h  Process.h  ProtobufHelpers.h  QemuProcess.h  SignalHelpers.h  SystemdNotify.h  TimestampHelpers.h  WaitFor.h  WatchFile.h
mqtt_paho/lib/lib-common/test_util/src/: GenerateError.cpp  InitLogging.cpp  InotifyWrapper.cpp  Process.cpp  QemuProcess.cpp  SignalHelpers.cpp  SystemdNotify.cpp  WaitFor.cpp  WatchFile.cpp
mqtt_paho/lib/lib-common/util/: CMakeLists.txt
mqtt_paho/lib/lib-common/util/include/util/: BackendConfig.h  MessageObserver.h  Protobuf.h  SignalGroupObserver.h  ToHex.h  Version.h
mqtt_paho/lib/lib-common/util/src/: Protobuf.cpp  SignalGroupObserver.cpp  ToHex.cpp
mqtt_paho/src/: CMakeLists.txt  main.cpp
mqtt_paho/src/paho_publisher/: CMakeLists.txt  MQTTPublisher.cpp  MQTTPublisher.h
mqtt_paho/src/paho_subscriber/: CMakeLists.txt  MQTTSubscriber.cpp  MQTTSubscriber.h
mqtt_paho/test/: CMakeLists.txt  main.cpp  test.cpp
mqtt_paho/test/fileManager/: fileReader.cpp  fileReader.hpp
mqtt_paho/test/in_out_files/: received_message.txt  unittest_1.txt
mqtt_paho/test/unittest/: main.cpp
mqtt_paho/test/unittest/unittest_pub/: unittest_pub.h
mqtt_paho/test/unittest/unittest_sub/: unittest_1.txt  unittest_sub.cpp  unittest_sub.h
mqtt_paho/test/unittest_pub/: main.cpp  test_pub.cpp  unittest_pub.cpp  unittest_pub.h
mqtt_paho/test/unittest_sub/: main.cpp  test_sub.cpp  unittest_sub.cpp  unittest_sub.h
publisher/: main.cpp  mqtt_pub.cpp  mqtt_pub.h
subscriber/: CMakeLists.txt  Dockerfile  README.md  mqtt_sub.cpp  mqtt_sub.h
